feat: add new reservation functionality and use mongoDB with replica set
