# src/controllers/dto/ReservationDTO.ts
@@ -1,0 +1,10 @@
+export class ReservationDTO {
+    constructor(
+        public userEmail: string,
+        public bookId: string,
+        public bookCount: number,
+        public returnDate: Date,
+        public reservationDate?: Date,
+        public isReturned?: boolean
+    ) {}
+}
